--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @admin, url: admin_registration_path do |f| %>
   <%= render "admins/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -26,4 +26,4 @@
   </div>
 <% end %>
 
-<%= render "admins/shared/links" %>
+<%= render "admin/shared/links" %>
