[Finish]商品編集画面作成

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,1 +1,39 @@
-<h3>商品一覧</h3>
+<div class="container" style="position:relative;">
+<h1>商品一覧</h1>
+<div style="position:absolute; top: 30px; right: 12px;">
+	<%= link_to new_admin_item_path do %>
+		<span class="btn btn-primary">新規商品登録</span>
+	<% end %>
+</div>
+<table class="table table-bordered">
+	<thead>
+		<tr>
+			<th>商品ID</th>
+			<th>商品名</th>
+			<th>税抜価格</th>
+			<th>ジャンル</th>
+			<th>ステータス</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @items.each do |item| %>
+		<tr>
+			<td><%= item.id %></td>
+			<td>
+					<%= link_to admin_item_path(item.id) do %>
+					<%= item.name %>
+					<% end %>
+			</td>
+			<td><%= item.price %></td>
+			<td><%= item.genre.name %></td>
+			<td>
+				<% if item.is_active? %>
+					<span class="badge" style="background:#D52438">販売停止</span>
+				<% else %>
+					<span class="badge" style="background:#8BCE9A">販売中</span>
+				<% end %>
+			</td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
