--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,33 @@
-<h1>管理者top</h1>
+
+<!-- 注文一覧画面 -->
+<div class="row" style="width:60%; margin:0 auto;">
+<h4>注文履歴一覧</h4>
+
+  <table class="table table-bordered">
+  	<tr>
+  		<th>購入日時</th>
+  		<th>購入者</th>
+  		<th>注文個数</th>
+  		<th>注文ステータス</th>
+  	</tr>
+
+    <% @orders.each do |order| %>
+  	<tr>
+  	  <td><%= link_to order[:created_at].strftime("%Y-%m-%d %H:%M"), admin_orders_path(order) %></td>
+  		<td><%= order.user.last_name %><%= order.user.first_name %></td>
+  		<td><%= order.order_details.sum(:quantity) %></td>
+  		<td><% case order.status when "入金待ち" %>
+  		        <span class="badge" style="background: red;"><%= order.status %></span>
+  		    <% when "入金確認" %>
+              <span class="badge" style="background: yellow;"><%= order.status %></span>
+          <% when "製作中" %>
+              <span class="badge" style="background: orange;"><%= order.status %></span>
+          <% when "発送準備中" %>
+              <span class="badge" style="background: green;"><%= order.status %></span>
+          <% when "発送済み" %>
+              <span class="badge" style="background: blue;"><%= order.status %></span>
+        <% end %></td>
+  	 </tr>
+    <% end %>
+  </table>
+</div>
