--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,15 @@
-<h1>top</h1>
+<h2>顧客top</h2>
+
+<p>ようこそ、ながのCAKEへ！</p>
+<p>このサイトは、ケーキ販売のECサイトになります。</p>
+<p>会員でない方も商品の閲覧はできますが、</p>
+<p>購入には会員登録が必要になります。</p>
+
+<h2>新着商品</h2>
+	<% @items.each do |item| %>
+		<tr>
+		  <td><%= image_tag item.image(item.id), size: "100x100" %></td>
+			<td><%= item.name %></td>
+			<td><%= item.price %></td>
+		</tr>
+	<% end %>
