--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -3,7 +3,7 @@
     <div class="form-horizontal">
       <h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">商品新規登録</h4>
       <div class="form-group">
-        <label class="col-sm-2 control-label">画像投稿</label>
+        <label class="col-sm-2 control-label">商品画像</label>
         <div class="col-sm-3">
           <%= f.file_field :image %>
         </div>
