--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,63 @@
-<h2>Sign up</h2>
+<div class="show-container" style= "width:50%; margin: 20px auto">
+  <h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">新規会員登録</h4>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+　　<div class="form-group">
+      <label>(姓)</label>
+      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+      <label>(名)</label>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <label>(セイ)</label>
+      <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+      <label>(メイ)</label>
+      <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+　　<div class="form-group">
+      <label>メールアドレス</label>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-<%= render "public/shared/links" %>
+    <div class="form-group">
+      <label>郵便番号（ハイフンなし）</label>
+      <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+    </div>
+
+     <div class="form-group">
+      <label >住所</label>
+      <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+    </div>
+
+    <div class="form-group">
+      <label>電話番号(ハイフンなし)</label>
+      <%= f.text_field :telephone_number, autofocus: true, autocomplete: "phone" %>
+    </div>
+
+    <div class="form-group">
+      <label>パスワード(６文字以上)</label>
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
+
+    <div class="form-group">
+      <label>パスワード（確認用）</label>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "新規登録", class:"btn btn-success", style:"display:block; margin: 0 auto;"%>
+    </div>
+  <% end %>
+
+  <h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">既に登録済みの方</h4>
+  <%= link_to new_customer_session_path do %>
+    <span class="glyphicon glyphicon-chevron-left">こちら</span>
+  <% end %>
+  <span>からログインしてください。</span>
+</div>
+
