--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -36,7 +36,7 @@
 
     <div class="form-group">
       <label>電話番号(ハイフンなし)</label>
-      <%= f.text_field :telephone_number, autofocus: true, autocomplete: "phone" %>
+      <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
     </div>
 
     <div class="form-group">
@@ -56,7 +56,7 @@
 
   <h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">既に登録済みの方</h4>
   <%= link_to new_customer_session_path do %>
-    <span class="glyphicon glyphicon-chevron-left">こちら</span>
+    <span class="glyphicon glyphicon-chevron-left"><u>こちら</u></span>
   <% end %>
   <span>からログインしてください。</span>
 </div>
