--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="show-container" style="width:50%; margin: 20px auto;">
 	<h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">マイページ</h4>
-	<h4>登録情報<%= link_to '編集する', edit_public_customer_path(@customer), class:"btn btn-info" %></h4>
+	<h4>登録情報<%= link_to '編集する', edit_public_customers_path, class:"btn btn-info" %></h4>
 
 	<table class="table table-condensed">
 		<tbody>
