--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -11,7 +11,7 @@
           <%= link_to '会員一覧', admin_customers_path, class:"btn btn-primary text-dark bg-light" %>
       		<%= link_to '注文履歴一覧', root_path, class:"btn btn-primary text-dark bg-light" %>
       		<%= link_to 'ジャンル一覧', admin_genres_path, class:"btn btn-primary text-dark bg-light" %>
-      		<%= link_to 'ログアウト', destroy_customer_session_path, method: :delete, class:"btn btn-primary text-dark bg-light" %>
+      		<%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class:"btn btn-primary text-dark bg-light" %>
 
       	<% else %>
       <!-- ログアウト時に表示される内容 -->
@@ -20,7 +20,7 @@
       		<% end %>
       		<%= link_to '商品一覧', items_path %>
       	  <%= link_to '新規登録', new_customer_registration_path %>
-      		<%= link_to 'ログイン', new_customer_session_path %>
+      		<%= link_to 'ログイン', new_admin_session_path %>
       	<% end %>
       </div>
   </div>
