--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
       <div id="box" style="margin: 0 auto 20px; text-align: center;">
       	<% if customer_signed_in? && current_customer.is_active %>
       <!-- ログイン時表示される内容-->
+          <%= link_to 'マイページ', customers_my_page_path, class:"btn btn-primary text-dark bg-light" %>
           <%= link_to '商品一覧', public_items_path, class:"btn btn-primary text-dark bg-light" %>
 
       		<%= link_to '注文履歴一覧', public_orders_path, class:"btn btn-primary text-dark bg-light" %>
