--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -4,10 +4,10 @@
   <h3>配送先編集</h3>
 
   <!-- 編集フォーム -->
-  <%= form_for(@address) do |f| %>
+  <%= form_with model: @address, url:public_address_path do |f| %>
     <table class="table table-bordered">
       <tr>
-	    <td>郵便番号</td>
+	    <td>郵便番号(ハイフンなし)</td>
 	    <td><%= f.text_field :postal_code, autofocus: true %></td>
 	  </tr>
 	  <tr>
@@ -15,21 +15,13 @@
 	    <td><%= f.text_field :address, autofocus: true, style: "width: 80%;" %></td>
 	  </tr>
 	  <tr>
-	    <td>電話番号</td>
-	    <td><%= f.text_field :telephone_number, autofocus: true %></td>
-	  </tr>
-	  <tr>
-	    <td>(姓/名)</td>
-	    <td><%= f.text_field :last_name, autofocus: true %>/<%= f.text_field :first_name, autofocus: true %></td>
-	  </tr>
-	  <tr>
-	    <td>(セイ/メイ)</td>
-	    <td><%= f.text_field :last_name_kana, autofucus: true %>/<%= f.text_field :first_name_kana, autofucus: true %></td>
+	    <td>宛名</td>
+	    <td><%= f.text_field :name, autofocus: true %></td>
 	  </tr>
     </table>
 
     <!-- 編集確定ボタン -->
-    <%= f.submit "編集する", class:"btn btn-primary btn-md" %>
+    <%= f.submit "変更内容を保存", class:"btn btn-primary btn-md" %>
   <% end %>
 
 </div>
