--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,22 +1,23 @@
 <div class="row" style="width: 90%; margin: 20px auto;">
-		<div class="col-xs-3" style = "margin-top: 50px">
+  <div class="col-md-3"  style = "margin-top: 50px">
 	</div>
 
 	<div class="col-xs-5" style ="margin: 100px 0 100px 0">
-		<%= attachment_image_tag @item, :image,style: "width:100%; "%>
+		<%= image_tag @item.image, size: "200x200" %>
 	</div>
 
 	<div class="col-xs-4" style ="margin: 100px 0 100px 0">
 		<h3><%= @item.name %></h3>
-		<p><%= @item.introduction%></p>
-	<!-- application_helper (税込価格	) -->
-		<h4><%= addTax(@item.price)%>
-		<span>円(税込価格)</span>
+		<p><%= @item.introduction %></p>
+		<h4>￥<%= @item.add_tax_price.to_s(:delimited) %>
+		<small>(税込)</small>
 		</h4>
 	<!-- #選択型のプルダウンメニュー -->
-	<%= form_with model: @cart_item do |f| %>
+	<%= form_with model: @cart_items do |f| %>
 		<%= f.hidden_field :item_id %>
+　　　　<div class="float-left"> <%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10], { include_blank: '個数選択'}, class: "pull-left" %> </div>
 		<%= f.submit "カートに入れる", class: 'btn btn-primary col-xs-5' %>
-		<%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
-	<% end %>
+    <% end %>
 	</div>
+  </div>
+</div>
