--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -6,14 +6,13 @@
 
 <div class="row" style="width:100%; height:20px;"></div>
 
-<div style="position:absolute; top: 30px; right: 0;">
-	<%= link_to public_cart_item_path, method: :delete do %>
+<div style="position:absolute; top: 5px; right: 0;">
+	<%= link_to destroy_all_public_cart_items_path, method: :delete do %>
 		<span class="btn btn-danger">カートを空にする</span>
 	<% end %>
 </div>
 
-<%= form_with model: @cart_items, url:cart_items_path, method: :patch do |f| %>
-<span style="color:#266846;">表示されている価格は全て税込です。</span>
+
 <table class="table table-bordered">
 	<tr style="background:#dad7d7; border: 1px solid #fff;">
 		<th>商品名</th>
@@ -22,27 +21,42 @@
 		<th>小計</th>
 		<th></th>
 	</tr>
- <% @cart_items.each do |item| %>
+	<% @total = 0 %>
+ <% @cart_items.each do |cart_item| %>
 	<tr>
 		<td>
-			<%= image_tag @item.image, :fill, 50, 50 %>
-			<%= @item.name %>
+	<% if cart_item.item.image.attached? %>
+    <%= image_tag cart_item.item.image, size: "100x100" %>
+  <% else %>
+    <%= image_tag 'no_image', size: "100x100" %>
+  <% end %>
+			<%= cart_item.item.name %>
 		</td>
 		<td>
- 			<%= @item.add_tax_price.to_s(:delimited) %>
+
+ 			<%= cart_item.item.add_tax_price.to_s(:delimited) %>
 		</td>
 		<td>
-			<%= hidden_field_tag "item_id[#{item.id}]", @item_id %>
-			<%= number_field_tag "quantity[#{item.id}]", @item.quantity, in: 1..10 %>
+			<%= form_with model: cart_item, url:public_cart_item_path(cart_item.id), method: :patch do |f| %>
+				<%= f.select :amount, [*1..10] %>
+				<%= f.submit "変更", class:"btn btn-primary btn-md" %>
+			<% end %>
 		</td>
 		<td>
-			<%= hidden_field_tag "price[#{item.id}]", @item.price %>
-			%= @item.add_tax_price.to_s(:delimited) %>
+            <%= cart_item.subtotal %>
+            <% @total += cart_item.subtotal %>
 		</td>
-		<td><%= link_to '削除する', public_cart_item_path(item), method: :delete %></td>
+		<td><%= link_to '削除する', public_cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
 	</tr>
+
  <% end %>
-</table>
+ 	</table>
+
+ 	<div class="col-xs-4 pull-right">
+		<table class="table table-striped">
+			<tr style="background:#dad7d7; border: 1px solid #fff;"><th>合計金額 <%= @total %></th></tr>
+		</table>
+  </div>
 
 <div class="row">
 	<div class="col-xs-4">
@@ -50,20 +64,9 @@
 			<span class="btn btn-info glyphicon glyphicon-chevron-left">買い物を続ける</span>
 		<% end %>
 	</div>
-	<div class="col-xs-4 pull-right">
-		<table class="table table-striped">
-			<tr style="background:#dad7d7; border: 1px solid #fff;"><th>合計金額</th></tr>
-			<tr><td><%= @order_details.purchase_price %></td></tr>
-		</table>
-
-		<div class="pull-right">
-			<%= f.submit '再計算する', class:"btn btn-default", data: {toggle:"tooltip", placement:"left"}, title:"数量を変更したらクリック" %>
-		</div>
-<% end %>
-
-	</div>
 
 </div>
+
 
 
 
@@ -72,7 +75,7 @@
 	<% if @cart_items.blank? %>
 		<% else %>
 		<div class="text-center">
-			<%= link_to '購入に進む', new_order_path, class:"btn btn-success" %>
+			<%= link_to '情報入力に進む', new_public_order_path, class:"btn btn-success" %>
 		</div>
 	<% end %>
 
