--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,7 +3,7 @@
 	</div>
 
 	<div class="col-xs-5" style ="margin: 100px 0 100px 0">
-		<%= image_tag @item.image, size: "200x200" %>
+		<%#= image_tag @item.image, size: "200x200" %>
 	</div>
 
 	<div class="col-xs-4" style ="margin: 100px 0 100px 0">
@@ -13,9 +13,9 @@
 		<small>(税込)</small>
 		</h4>
 	<!-- #選択型のプルダウンメニュー -->
-	<%= form_with model: @cart_items do |f| %>
-		<%= f.hidden_field :item_id %>
-　　　　<div class="float-left"> <%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10], { include_blank: '個数選択'}, class: "pull-left" %> </div>
+	<%= form_with model: @cart_item, url:public_cart_items_path do |f| %>
+		<%= f.hidden_field :item_id, :value => @item.id %>
+　　　　<div class="float-left"> <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], { include_blank: '個数選択'}, class: "pull-left" %> </div>
 		<%= f.submit "カートに入れる", class: 'btn btn-primary col-xs-5' %>
     <% end %>
 	</div>
