--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -11,6 +11,7 @@
 			</tr>
 
 <% @total_price = 0 %>
+<%= form_with model: @order, url:public_orders_path do |f| %>
  <% @cart_items.each do |cart_item| %>
 	<tr>
 		<td>
@@ -68,6 +69,15 @@
 <hr>
 
 <div class="text-center">
-	<%= link_to '注文を確定する', complete_public_orders_path, class:"btn btn-success" %>
+	<%= f.submit '注文を確定する', class:"btn btn-success" %>
 </div>
+<%= f.hidden_field :customer_id %>
+<%= f.hidden_field :order_postal_code %>
+<%= f.hidden_field :order_address %>
+<%= f.hidden_field :order_name %>
+<%= f.hidden_field :postage %>
+<%= f.hidden_field :billing_amount %>
+<%= f.hidden_field :payment_method %>
+<% end %>
 </div>
+
