--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -12,7 +12,7 @@
 	<tr>
 		<td><%= customer.id %></td>
 		<td>
-			<%= link_to admin_customers_path(customer) do %>
+			<%= link_to admin_customer_path(customer.id) do %>
 				<%= customer.last_name %> <%= customer.first_name %>
 			<% end %>
 		</td>
