--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row" style= "width: 80%; margin: 20px auto;">
-  <%= form_with model: @item, url:admin_item_path do |f| %>
+  <%= form_with model: @item, url:admin_items_path do |f| %>
     <div class="form-horizontal">
       <h4 style="margin-bottom: 20px; border-left: 2px solid #2D6F4C; padding: 10px;">商品新規登録</h4>
       <div class="form-group">
